--- a/coltsteel/MuseumOfCandy/app.css
+++ b/coltsteel/MuseumOfCandy/app.css
@@ -3,6 +3,19 @@ body {
   font-family: "Nunito", sans-serif;
 }
 
+.blurb h2 {
+  color: #ea1c2c;
+  font-weight: 100;
+  font-size: 2.5rem;
+}
+
+.blurb p {
+  color: #f498b8;
+  font-weight: 100;
+  font-size: 1.125rem;
+  line-height: 2;
+}
+
 #mainNavbar {
   font-size: 1.5rem;
   font-weight: 100;
@@ -27,6 +40,10 @@ body {
 #headingGroup h1 {
   font-weight: 100;
   font-size: 3rem;
+}
+
+.content {
+  margin-top: 100px;
 }
 
 @media (max-width: 1200px) {
