--- a/coltsteel/MuseumOfCandy/app.css
+++ b/coltsteel/MuseumOfCandy/app.css
@@ -1,53 +1,59 @@
 body {
-  background-color: #f5d9d5;
-  font-family: "Nunito", sans-serif;
+    background-color: #f5d9d5;
+    font-family: "Nunito", sans-serif;
 }
 
 .blurb h2 {
-  color: #ea1c2c;
-  font-weight: 100;
-  font-size: 2.5rem;
+    color: #ea1c2c;
+    font-weight: 100;
+    font-size: 2.5rem;
 }
 
 .blurb p {
-  color: #f498b8;
-  font-weight: 100;
-  font-size: 1.125rem;
-  line-height: 2;
+    color: #f498b8;
+    font-weight: 100;
+    font-size: 1.125rem;
+    line-height: 2;
 }
 
 #mainNavbar {
-  font-size: 1.5rem;
-  font-weight: 100;
+    font-size: 1.5rem;
+    font-weight: 100;
 }
 
 #mainNavbar .navbar-brand {
-  color: #ea1c2c;
+    color: #ea1c2c;
 }
 
 #mainNavbar .nav-link {
-  color: white;
+    color: white;
 }
 
 #mainNavbar .nav-link:hover {
-  color: #ea1c2c;
+    color: #ea1c2c;
 }
 
 #headingGroup span {
-  color: #ea1c2c;
+    color: #ea1c2c;
 }
 
 #headingGroup h1 {
-  font-weight: 100;
-  font-size: 3rem;
+    font-weight: 100;
+    font-size: 3rem;
 }
 
 .content {
-  margin-top: 100px;
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
+.navbar.scrolled {
+    background-color: rgb(222, 192, 222);
+    transition: all 1s ease-in-out;
 }
 
 @media (max-width: 1200px) {
-  #headingGroup h1 {
-    font-size: 2.5rem;
-  }
+    #headingGroup h1 {
+        font-size: 2.5rem;
+    }
 }
